<resources>
    <string name="app_name">Planner</string>
    <string name="your_api_key">AIzaSyAH3_lbMbxBw2mF_DtwQQFo7GDCr4WQyw0</string>
    <string name="server_client_id" translatable="false">366548567791-jurvb1tb9f1m26nftui32hgg30ue7p22.apps.googleusercontent.com</string>
    <string name="clear_list">Очистить список</string>
    <string name="clearSetting">Очистить данные о пароле</string>
    <string name="progress">Прогресс</string>
    <string name="clear_minutes">Очистить поле всего минут</string>
    <string name="save">Сохранить</string>
    <string name="events">События</string>
    <string name="tasks">Задачи</string>
    <string name="ideas">Идеи</string>
    <string name="all_tasks">Всего записей</string>
    <string name="complete_tasks">Завершённых задач</string>
    <string name="timing">Тайминг</string>
    <string name="all_records">Всего записей</string>
    <string name="all_minutes">Всего минут</string>
    <string name="meets">Встречи</string>
    <string name="personal">Персональные</string>
    <string name="home">Дом</string>
    <string name="work">Работа</string>
    <string name="privates">Приватные</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>
    <string name="are_you_sure">Вы уверены ?</string>
    <string name="complete_work">Завершить работу</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="clear_password">Очистить пароль</string>
    <string name="clear_minute">Очистить поле минут</string>
    <string name="data_about_minutes_clear">Данные о минутах очищены</string>
    <string name="record_idea">Введите суть идеи</string>
    <string name="record_description">Введите описание</string>
    <string name="event_calendar">События по календарю</string>
    <string name="done_tasks">Выполнение задач</string>
    <string name="fast_add_your_event"><![CDATA[Быстрое добавление ваших событий \nБыстрое переключения  между датами \nПросмотр недель]]></string>
    <string name="list_tasks_help_you">Cписок задач поможет вам наполнить ваш день и добиться цели</string>
    <string name="record_idea_simple">Запись идей</string>
    <string name="check_timing">Отслеживание тайминга</string>
    <string name="most_effect_idea">Самый эффективный способ перенести идеи, мысли и задачи, не теряя внимания</string>
    <string name="plus_you_kpd">Один из лучших способов повысить свой КПД</string>
    <string name="create_password">Создание пароля</string>
    <string name="create_question">Создание вопроса</string>
    <string name="create_question_answer">Создание ответа</string>
    <string name="qst_example">Какой твой любимый цвет ?</string>
    <string name="change_theme">Сменить тему</string>
    <string name="planner">Planner</string>
    <string name="add_event">Добавить событие</string>
    <string name="walk_dog">Сходить на встречу</string>
    <string name="begin">Начало</string>
    <string name="begin_time">Начало времени</string>
    <string name="end_time">Конец времени</string>
    <string name="delete">Удалено</string>
    <string name="empty">Пусто</string>
    <string name="stopwatch">Секундомер</string>
    <string name="go_count">Идёт отсчёт</string>
    <string name="need_all_fields">Необходимо заполнить все поля</string>
    <string name="try_color">Попробовать</string>
    <string name="done_t">Выполненные задачи</string>
    <string name="column_empty">Колонка пуста</string>
    <string name="write_idea">Записать идею</string>
    <string name="color">Цвет</string>
    <string name="camera">Камера</string>
    <string name="image">Картинка</string>
    <string name="timer">Таймер</string>
    <string name="what_are_doing">Что вы будете делать?</string>
    <string name="apply">Принять</string>
    <string name="time">Время</string>
    <string name="toStart">Начать</string>
    <string name="complete">Завершить</string>
    <string name="minutes_amount">Количество минут</string>
    <string name="data_of_password_delete">Данные о пароле удалены</string>
    <string name="choose_language">Выберите Язык…</string>
    <string name="change_language">Сменить язык</string>
    <string name="task">Задача</string>
    <string name="zero_minutes_pass">0 минут прошло</string>
    <string name="ready">Готовы ?</string>
    <string name="timer_dont_end">Таймер ещё не окончен</string>
    <string name="timer_end">Таймер закончил свою работу</string>
    <string name="minut">минут</string>
    <string name="choose_color">Выберите цвет</string>
    <string name="select_time">Выберите время</string>
    <string name="re_enter">Введите заново</string>
    <string name="of_symbols">Введите пароль из 4 символов</string>
    <string name="do_not_match">Не совпадает</string>
    <string name="correct_password">Верный пароль</string>
    <string name="Wrong">Не правильно</string>
    <string name="plan_own_day">Распланируй свой день</string>
    <string name="choose_theme">\"Выберите тему… \"</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="to_delete">Удалить</string>
    <string name="color_dont_choosed">Цвет не выбран</string>
    <string name="share_app">Поделиться</string>
    <string name="add_title">Введите текст</string>
    <string name="add_icon">Выберите картинку: </string>
    <string name="answer_qst">Ответьте на вопрос</string>
    <string name="add_password">Установите пароль</string>
    <string name="qst_not_found">Введите вопрос</string>
    <string name="answer_not_found">Введите ответ</string>
    <string name="create_secret_word">Создайте секретное слово</string>
    <string name="enter_secret_word">Введите секретное слово</string>
    <string name="invalid_entered">Не правильно введены данные</string>
    <string name="attention">Внимание!</string>
    <string name="task_dialog_message">Вы уверены, что хотите удалить?</string>
    <string name="cancel">Отмена</string>
    <string name="choosed">Вы выбрали: </string>
    <string name="change_image_title">Поменять картинку и название категории</string>
    <string name="remove_category">Удалить категорию</string>
    <string name="what_to_do">Что бы вы хотели сделать?</string>
    <string name="help_idea_add">Для добавления новой идеи нажмите на +</string>
    <string name="help_calendar_add">Для добавления нового события нажмите на +</string>
    <string name="help_timing_add">Для добавления новой задачи нажмите на +</string>
    <string name="changing_theme">Смена темы</string>
    <string name="board_theme_desc">Вы можете выбрать тему здесь, нажатием на один из вариантов, или перейти в Настройки</string>
    <string name="are_you_sure_delete_all">Вы действительно хотите удалить все записи?</string>
    <string name="helper_dialog_text">Вы можете поменять название и картинку категории на долгое нажатие</string>
    <string name="choose_app">Выберите приложение</string>
    <string name="new_aim">Пора ставить новые цели!</string>
    <string name="move_tasks">Вы можете поменять задачи местами</string>
    <string name="delete_task">Вы можете удалить ненужную задачу</string>
    <string name="achievement_app">Достижения</string>
    <string name="completed">Выполненных</string>
    <string name="write_reviews">Написать отзыв</string>
    <string name="review_on_app">Отзыв на приложение Planner</string>
    <string name="hello">Здравствуйте </string>
    <string name="attaboy">Молодец </string>
    <string name="Persistent">Настойчивый </string>
    <string name="Overwhelming">Преодолеватель </string>
    <string name="important_message">Важное сообщение!</string>
    <string name="you_got">Вы получили звание</string>
    <string name="speak_something">Скажите что-нибудь</string>
    <string name="done">Готово</string>
    <string name="help_bubble">Нажмите чтобы увидеть подсказки</string>
    <string name="timer_text">Вы можете использовать таймер</string>
    <string name="stopwatch_text">Вы можете использовать секундомер</string>
    <string name="dialog_title">Смена картинки и названия</string>
    <string name="move_title">Смена положения задачи</string>
    <string name="delete_title">Удаление задачи</string>
    <string name="timer_title">Таймер</string>
    <string name="stopwatch_title">Секундомер</string>
    <string name="intro">Интро</string>
    <string name="you_sure_delete">Вы уверены что хотите удалить запись?</string>
    <string name="sync_planner_with_google">Синхронизируйте Planner с вашим Google аккаунтом для безопасности ваших записей</string>
    <string name="good_luck">Желаем дальнейших успехов !</string>
    <string name="wait">Пожалуйста подождите…</string>
    <string name="error">Произошла ошибка</string>
    <string name="voice_add">Голосовой ввод…</string>
    <string name="enter">Войти</string>
    <string name="read">Читать</string>
    <string name="cloud_save_data">Облачное хранение данных</string>
    <string name="private_policy">Политика конфиденциальности</string>
    <string name="you_sure_read_private_policy">Вы прочитали политику о конфиденциальности?</string>
    <string name="date">Дата</string>
    <string name="sync">Синхронизировать</string>
    <string name="settings">Настройки</string>
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>
    <string name="want_save_data_in_google">Вы хотите защитить свои записи ?</string>
    <string name="you_name">Ваше имя</string>
    <string name="rate_app">Поставить оценку</string>
    <string name="not_enough_balanсe">Недостаточно средств на балансе !</string>
    <string name="attention_alert">Внимание!</string>
    <string name="advice1_1">\"Относитесь к деньгам с уважением \"</string>
    <string name="advice1_2">Ваши деньги это ваше «законсервированное» время и энергия, которые вы потратили, чтобы их заработать.</string>
    <string name="advice2">\"Заведите себе привычку вести учет доходов и расходов в электронном или письменном виде. \"</string>
    <string name="advice3_1">Избавьтесь от кредитных карт, потребительских кредитов и прочих долгов.</string>
    <string name="advice3_2">\" Долги давят психологически, вгоняют людей в стресс и заставляют беспокоиться о завтрашнем дне. В итоге, за пользование чужими деньгами вы заплатите не только своими деньгами, но и своим здоровьем и своей энергией.\"</string>
    <string name="advice4_1">Живите по средствам.</string>
    <string name="advice4_2">\" Когда вы нарушаете это правило, вы теряете гармонию в собственной жизни. Вы тратите деньги, которых не заработали, Фактически, пользуясь тем, что вам не принадлежит, вы можете лишиться этого в любой момент! Осознайте разницу между своими потребностями — тем, что вам действительно нужно, и своими желаниями — тем, что «неплохо было бы иметь». Расставьте приоритеты так, чтобы сначала закрывать все потребности, а то что остается пускать на хотелки и развлечения.\"</string>
    <string name="advice5_1">Откажитесь от импульсивных покупок и необязательных трат.</string>
    <string name="advice5_2">\" Составляйте список покупок перед походом в магазин и придерживайтесь его.\"</string>
    <string name="advice6_1">Работайте над повышением своих доходов.</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="habit_name">Привычка</string>
    <string name="day_amount">Введите количество дней:</string>
</resources>