<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/royalEnd"
        android:padding="16dp">

        <EditText
            android:id="@+id/spending_amount_edt_qt2"
            style="@style/financeText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_rec8"
            android:hint="@string/enter_amount"
            android:inputType="number"
            android:padding="8dp"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/spending_description_edt"
            style="@style/financeText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/rounded_rec8"
            android:hint="@string/record_description"
            android:inputType="textCapSentences"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spending_amount_edt_qt2" />

        <TextView
            android:id="@+id/ok_tv_qt2"
            style="@style/financeText"
            android:layout_width="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            tools:ignore="UnusedAttribute"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="20dp"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/spending_amount_edt_qt2"
            app:layout_constraintTop_toTopOf="@id/cancel_tv_qt2" />

        <TextView
            android:id="@+id/cancel_tv_qt2"
            style="@style/financeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:foreground="?attr/selectableItemBackground"
            tools:ignore="UnusedAttribute"
            android:padding="20dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/spending_description_edt"
            app:layout_constraintTop_toBottomOf="@id/spending_description_edt" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/app_round" />
</RelativeLayout>