<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/add_event_toolbar_view"
        layout="@layout/add_event_toolbar_layout" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Нужно"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_event_toolbar_view" />

    <EditText
        android:id="@+id/edit_title"
        style="@style/todoTextColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/walk_dog"
        android:inputType="textCapSentences"
        android:maxLength="35"
        android:padding="12dp"
        android:textColorHint="@color/hint_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/start_date_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/begin"
        android:textColor="@color/myWhite"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/edit_title"
        app:layout_constraintTop_toBottomOf="@id/edit_title" />

    <TextView
        android:id="@+id/start_date_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Дата"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/start_date_button"
        app:layout_constraintStart_toStartOf="@id/start_date_button"
        app:layout_constraintTop_toBottomOf="@id/start_date_button" />

    <Button
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/begin_time"
        android:textColor="@color/myWhite"
        android:textSize="12sp"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_date_number" />

    <TextView
        android:id="@+id/start_time_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Время"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/start_time"
        app:layout_constraintStart_toStartOf="@id/start_time"
        app:layout_constraintTop_toBottomOf="@id/start_time" />

    <Button
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/end_time"
        android:textColor="@color/myWhite"
        android:textSize="12sp"
        app:backgroundTint="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_date_number" />

    <TextView
        android:id="@+id/end_time_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Время"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/end_time"
        app:layout_constraintStart_toStartOf="@id/end_time"
        app:layout_constraintTop_toBottomOf="@id/end_time" />

</androidx.constraintlayout.widget.ConstraintLayout>