<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="345dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/layout_bg">

    <TextView
        android:id="@+id/planner_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:elevation="2dp"
        android:text="@string/planner"
        android:textColor="@color/myWhite"
        android:textSize="30sp"
        app:srcCompat="@mipmap/app_round" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/layout_bg"
        android:padding="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editText_wrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/record_idea"
            android:padding="16dp"
            android:textColorHint="@color/hint_color"
            app:boxStrokeColor="#00BCD4"
            app:hintTextColor="#00BCD4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_create_idea"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="20"
                android:textColor="@color/myWhite"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.lawlett.taskmanageruikit.utils.RoundRectCornerImageView
            android:id="@+id/idea_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/round_outline"
            android:foreground="?attr/selectableItemBackground"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/apply_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_wrapper"
            app:srcCompat="@drawable/ic_choose_image"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/apply_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:padding="12dp"
            android:text="@string/apply"
            android:textColor="@color/myWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idea_image"
            tools:ignore="UnusedAttribute" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>